fixing spacing between h2 elements

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -50,6 +50,7 @@ h1 {
 h2 {
   font-size: 3rem;
   margin-bottom: 0.8rem;
+  margin-right: 0.6rem;
   cursor: pointer;
   display: inline-block;
 }
